--- a/b.html
+++ b/b.html
@@ -133,7 +133,7 @@
 
             function to(v) {
                 var index = GetQueryString('index')
-                window.location.href = "index.html?index=" + index + "&type=2&key=" + v
+                window.location.href = "?index=" + index + "&type=2&key=" + v
             }
             $searchText.on('click', function() {
                 $searchBar.addClass('weui-search-bar_focusing');
