--- a/a.html
+++ b/a.html
@@ -19,10 +19,10 @@
         <div class="page">
             <div class="page__hd">
 
-                <center>
+                <!-- <center>
                     <a><img src="./images/1.jpg" style="width:100px" /></a>
                     <h4>客服微信：leo20160601</h4>
-                </center>
+                </center> -->
 
             </div>
             <div class="page__hd">
