--- a/a.html
+++ b/a.html
@@ -85,6 +85,13 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./example.js"></script>
     <script type="text/javascript">
+        function GetQueryString(name) {
+            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+            var r = decodeURI(window.location.search).substr(1).match(reg);
+            if (r != null)
+                return unescape(r[2]);
+            return null;
+        }
         $(function() {
             var $searchBar = $('#searchBar'),
                 $searchResult = $('#searchResult'),
