--- a/b.html
+++ b/b.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover">
-    <title>WeUI</title>
+    <title>佐佐团队-学习库</title>
     <link rel="stylesheet" href="./style/weui.css" />
     <link rel="stylesheet" href="./example.css" />
     <link rel="stylesheet" href="./ico.css" />
