--- a/a.html
+++ b/a.html
@@ -20,8 +20,8 @@
             <div class="page__hd">
 
                 <center>
-                    <a><img src="./images/1.jpg" style="width:100px" /></a>
-                    <h4>客服微信：leo20160601</h4>
+                    <a><img src="./images/wrs312.png" style="width:100px" /></a>
+                    <h4>客服微信：wrs312</h4>
                 </center>
 
             </div>
