添加4个网盘地址

--- a/self.html
+++ b/self.html
@@ -43,9 +43,10 @@
                     <a href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
                 </div>
                 <div class="button-sp-area">
-                    <a href="?index=1" class="weui-btn weui-btn_mini weui-btn_default">A盘</a>
-                    <a href="?index=2" class="weui-btn weui-btn_mini weui-btn_default">B盘</a>
-                    <a href="?index=3" class="weui-btn weui-btn_mini weui-btn_default">C盘</a>
+                    <a href="?name=touch_id1999" class="weui-btn weui-btn_mini weui-btn_default">touch_id1999</a>
+                    <a href="?name=18150658549" class="weui-btn weui-btn_mini weui-btn_default">18150658549</a>
+                    <a href="?name=a871112780" class="weui-btn weui-btn_mini weui-btn_default">a871112780</a>
+                    <a href="?name=sophie00777" class="weui-btn weui-btn_mini weui-btn_default">sophie00777</a>
                 </div>
 
                 <div class="weui-cells" id="list"></div>
