文件库功能

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <center>
                     <a><img src="./images/1.jpg" style="width:100px" /></a>
-                    <h4>客服微信：leo20160601</h4>
+                    <h4>客服微信：wrs317</h4>
                 </center>
 
             </div>
